Corrected alignment and main selector

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,36 +14,39 @@ h1 {
 }
 
 main img {
-    max-width: 840px;
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px grey;
 }
-    
+
+main { 
+    max-width: 840px;
+}
+
 p {
-        padding: 0;
+    padding: 0;
 }
     
-        aside {
-        width: 20em;
-        margin: 1em;
-        border: 1px solid rgb(0 0 0 / 0.2); 
-        padding: 1em;
-        background-color:#eee; 
-        color:#333;
-        text-align: center;
-    }
+aside {
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgb(0 0 0 / 0.2); 
+    padding: 1em;
+    background-color:#eee; 
+    color:#333;
+    text-align: center;
+}
 
-    aside img{
-        width: 200px;
-        height: auto;
-    }
+aside img{
+    width: 200px;
+    height: auto;
+}
 
-    footer {
-        margin-top: 15em;
-        border-top: 1px solid #000;
-        text-align: center;
-    }
+footer {
+    margin-top: 15em;
+    border-top: 1px solid #000;
+    text-align: center;
+}
     
